--- a/c.html
+++ b/c.html
@@ -15,7 +15,7 @@
     <div class="hoverc"><a href="css.html">CSS</a></div>
    <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
     <div class="hoverc"><a href="c.html" class="background">C</a></div>
-    <div class="hoverc"><a href="C++.html">C++</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
      <div class="hoverc"><a href="python.html">PYTHON</a></div>
     <div class="hoverc"><a href="java.html">JAVA</a></div>
    <div class="hoverc"><a href="sql.html">SQL</a></div>
@@ -23,6 +23,7 @@
    </nav>
    </header>
     <h1>C Programming</h1>
+    <div class="page">
     <section>
     <h2>💻 Why You Should Learn C Programming</h2>
     <p>C is the foundation of modern programming. It’s fast, powerful, and used in everything from operating systems to embedded devices. If you want to understand how computers work or become a strong programmer — <b>C is where it all begins.</b></p>
@@ -47,11 +48,11 @@
        🧠 Mini Projects —  Apply concepts in real small projects to boost confidence<br>
        🎥 Tutorial Videos — Visual learning for easy understanding</p>
 </section>
-    <div class="div2">
-    <div class="hoverc"><a href="ctheory.html">C LEARN</a></div>
-    <div class="hoverc"><a href="cpractical.html">C PRACTICAL</a></div>
-    <div class="hoverc"><a href="cprojects.html">C PROJECTS</a></div>
-    <div class="hoverc"><a href="ctutorialvid.html">C TUTORIAL VIDEO</a></div>
+    <a href="ctheory.html"><div class="div2">C LEARN</a></div>
+    <a href="cpractical.html"><div class="div2">C PRACTICAL</a></div>
+   <a href="cprojects.html"> <div class="div2">C PROJECTS</a></div>
+   <a href="ctutorialvid.html"> <div class="div2">C TUTORIAL VIDEO</a></div>
+   <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
     </div>
     <h3 class="end">🌱 Start with C. Build your logic. Unlock the world of coding.</h3>
     </body>
