--- a/css.html
+++ b/css.html
@@ -15,7 +15,7 @@
     <div class="hoverc"><a href="css.html" class="background">CSS</a></div>
    <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
     <div class="hoverc"><a href="c.html">C</a></div>
-    <div class="hoverc"><a href="C++.html">C++</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
      <div class="hoverc"><a href="python.html">PYTHON</a></div>
     <div class="hoverc"><a href="java.html">JAVA</a></div>
    <div class="hoverc"><a href="sql.html">SQL</a></div>
@@ -24,6 +24,7 @@
    </nav>
    </header>
         <h1>CSS</h1>
+        <div class="page">
     <section>
         <h2>🎨 Why You Should Learn CSS</h2>
         <p>CSS (Cascading Style Sheets) is what turns plain HTML into beautiful, styled websites. Whether you want sleek layouts, colors, animations, or mobile-friendly pages — CSS is your creative tool to design the web.</p>
@@ -53,14 +54,13 @@
                🛠️ Practical — Layouts with Flexbox & Grid, responsive design tips<br>
                🎥 Tutorial Video — Step-by-step visuals to style your own web pages</p>
             </section>
-        <div class="div2">
-            <div class="hoverc"><a href="csstheory.html">CSS LEARN</a></div>
-            <div class="hoverc"><a href="csspractical.html">CSS PRACTICAL</a></div>
-            <div class="hoverc"><a href="csstutorial.html">TUTORIAL</a></div>
-        </div>
-        <div class="end">
-            <h3>🌱 Start small, grow beautifully. CSS is your secret power to turn code into creativity.</h3>
-        </div>
-    </div>
+            <a href="csstheory.html"><div class="div2">CSS LEARN</div></a>
+            <a href="csspractical.html"><div class="div2">CSS PRACTICAL</div></a>
+            <a href="csstutorial.html"><div class="div2">TUTORIAL</div></a>
+            <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
+            </div>
+       
+            <h3> <div class="end">🌱 Start small, grow beautifully. CSS is your secret power to turn code into creativity.</div></h3>
+    
     </body>
 </html>
