--- a/html.html
+++ b/html.html
@@ -15,7 +15,7 @@
     <div class="hoverc"><a href="css.html">CSS</a></div>
    <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
     <div class="hoverc"><a href="c.html">C</a></div>
-    <div class="hoverc"><a href="C++.html">C++</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
     <div class="hoverc"><a href="python.html">PYTHON</a></div>
     <div class="hoverc"><a href="java.html">JAVA</a></div>
    <div class="hoverc"><a href="sql.html">SQL</a></div>
@@ -23,6 +23,7 @@
    </nav>
    </header>
         <h1>HTML</h1>
+        <div class="page">
         <section>
             <h2>💻 Why You Should Learn HTML</h2>
             <p>
@@ -79,13 +80,15 @@
               🎥 Tutorial Video — Visual learning to help you grasp HTML easily and quickly</p> 
            </section>
            
-
-   <div class="hoverc"><a href="htmltheory.html">HTML LEARN</a></div>
-   <div class="hoverc"><a href="htmlpractical.html">HTML PRACTICAL</a></div>
-   <div class="hoverc"><a href="htmlprojects.html"> HTML PROJECTS</a></div>
+<h2 style="text-align:center;">🧭 Choose What You Want to Do:</h2>
+   <a href="htmltheory.html"><div class="div2">HTML LEARN</div></a>
+   <a href="htmlpractical.html"><div class="div2">HTML PRACTICAL</div></a>
+   <a href="htmlprojects.html"><div class="div2"> HTML PROJECTS</div></a>
+   <a href="htmlpracticecode.html"><div class="div2">PRACTICE LIVE CODE</div></a></div>
         <h3 class="end">
             🌱 Start small, grow big. HTML is not just a skill — 
             it's your first step toward building your online presence and tech career.
+            </h3>
     </body>
 </html>
 
