--- a/html1introduction.html
+++ b/html1introduction.html
@@ -9,18 +9,24 @@
     <body>
         <div class="main">
    <h1>HTML INTRODUCTION (Hypertext Markup Language)</h1>
-    <div class="subdiv">
-    <h3>HTML stands for Hyper Text Markup Language.<br><BR>
-    HTML is the standard language used to create web pages.</h3></div>
-<br><br><hr>
     <h2>What is HTML?</h2>
     <div class="subdiv">
         <ul>
+            <li>HTML stands for <b>HyperText Markup Language.</b></li>
             <li>HTML is <strong>not a programming language</strong> - it's a <b>markup language.</b></li>
             <li>It is used to <b>structure content</b> on the web using <b>tags.</b></li>
             <li>Web browsers like <b>Chrome</b> or <b>Firefox</b> read HTML to display text, images, buttons, and other elements.</li>
         </ul>
     </div><br><br><hr>
+    <h2>Features</h2>
+    <ol>
+        <li>Simple and Easy to learn.</li>
+        <li>Platform Independent - works on any browser/device.</li>
+        <li>Supports Multimedia - Images, audio, video.</li>
+        <li>Hyperlinking -  connects different pages / website.</li>
+        <li>Search Engine Friendly.</li>
+        <li>Works with CSS & JavaScript - For styling and interactivity.</li>
+    </ol>
     <h2>Basic structure of an HTML page:</h2>
     <div class="code">
     <pre>
@@ -62,7 +68,7 @@
 </div>
 <br><br>
 <a href="programminglanguages.html"><button>Previous</button></a>
-    <a href="html2elements.html"><button>Next</button></a>
+    <a href="html2elements.html"><button>Next chapter</button></a>
 
     </body>
 </html>
