--- a/html1introductionmcq.html
+++ b/html1introductionmcq.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>HTML INTRODUCTION MCQ QUESTIONS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="html1introductionmcq.css" rel="stylesheet">
-        <style>
-            
-        
-        </style>
     </head>
     <body>
     <h1>HTML INTRODUCTION EXERCISE</h1>
@@ -19,7 +15,6 @@
         <label class="labeloption"><input type="radio" name="q1" value="B">B. HyperText and Markup Language</label><br>
         <label class="labeloption"><input type="radio" name="q1" value="C">C. HyperText Markup Language</label><br>
         <label class="labeloption"><input type="radio" name="q1" value="D">D. Home Tool Markup Language</label>
-
     </div>
      <div class="question">
         <h3>2. What type of language is HTML?</h3>
@@ -27,7 +22,6 @@
         <label class="labeloption"><input type="radio" name="q2" value="B">B. Scripting Language</label><br>
         <label class="labeloption"><input type="radio" name="q2" value="C">C. Markup Language</label><br>
         <label class="labeloption"><input type="radio" name="q2" value="D">D. Styling Language</label>
-
     </div>
     <div class="question">
         <h3>3. Which of the following tags defines the beginning of an HTML document?</h3>
@@ -36,7 +30,6 @@
         <label class="labeloption"><input type="radio" name="q3" value="C">C. &lt;html&gt; </label><br>
         <label class="labeloption"><input type="radio" name="q3" value="D">D. &lt;body&gt; </label>
     </div>
-
     <div class="question">
         <h3>4. What is the purpose of the &lt;head&gt; tag in HTML?</h3>
         <label class="labeloption"><input type="radio" name="q4" value="A">A. To display the header of the page</label><br>
@@ -100,15 +93,15 @@
         function checkAnswers() {
             const answers = {
                 q1: "C",
-                q2: "C",
+                q2: "B",
                 q3: "B",
-                q4: "C",
-                q5: "D",
-                q6: "C",
-                q7: "C",
+                q4: "D",
+                q5: "B",
+                q6: "A",
+                q7: "A",
                 q8: "C",
-                q9: "C",
-                q10: "B"
+                q9: "D",
+                q10: "C"
             };
             let score = 0;
             let total = Object.keys(answers).length;
