--- a/html1intropracticalexamples.html
+++ b/html1intropracticalexamples.html
@@ -12,7 +12,7 @@
                 margin:30px;
                 font-family: helvetica;
             }
-            h1{
+            .head{
                 text-align: center;
                 background-color: rgb(97, 6, 97);
                 color: rgb(239, 225, 242);
@@ -39,42 +39,65 @@
                 text-decoration: none;
                 color: white;
             }
+            .first, .second, .third, .fourth,.fifth{
+                display: inline-flex;
+            }
+            img{
+                width:900px;
+                height: 400px;
+            }
+            pre{
+                padding: 40px;
+            }
         </style>
     </head>
     <body>
-        <h1>Examples</h1>
-        <div>
-    <h3>Example 1: </h3>
-    
+        <h1 class="head">Examples</h1>
+        <div class="first">
+    <h3>Example 1:</h3>
+    <br><br><br>
     <pre>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
- &lt;title&gt;Welcome Page&lt;/title&gt;
+ &lt;title&gt;First Webpage&lt;/title&gt;
 &lt;/head&gt;
- &lt;h2&gt;Welcome to My Site&lt;/h2&gt;
- &lt;p&gt;This is the homepage.&lt;/p&gt;
+&lt;body&gt;
+ &lt;h1&gt;My First Webpage&lt;/h1&gt;
+ &lt;p&gt;Welcome to My Webpage.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
+<br>
+<br>
+<a href=""></a>
     </pre>
+<hr>
+<h3>Output:</h3>
+<img src="html1introeg1.png">
+<br><br><br><br>
     </div>
-    <hr>
-    <div>
-    <h3>Example 2: </h3>
+    <hr><br><br>
+    <div class="second">
+    <h3>Example 2:</h3>
         <pre>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
 &lt;head&gt;
- &lt;title&gt;About&lt;/title&gt;
+ &lt;title&gt;My First Page&lt;/title&gt;
 &lt;/head&gt;
- &lt;h3&gt;About Us&lt;/h3&gt;
- &lt;p&gt;We love creating websites.&lt;/p&gt;
+&lt;body&gt;
+ &lt;h1&gt;Welcome to My World&lt;/h1&gt;
+ &lt;p&gt;This is my first Webpage
+    using Basic HTML tags.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
         </pre>
-        </div>
         <hr>
-        <div>
+        <h3>Output:</h3>
+         <img src="htmlintroeg2.png">
+        </div>
+        <hr><br><br>
+        <div class="third">
     <h3>Example 3:</h3>
     <pre>
 &lt;!DOCTYPE html&gt;
@@ -82,14 +105,19 @@
 &lt;head&gt;
  &lt;title&gt;Services&lt;/title&gt;
 &lt;/head&gt;
- &lt;h5&gt;Services&lt;/h5&gt;
- &lt;p&gt;We offer web development and design.&lt;/p&gt;
+&lt;body&gt;
+ &lt;h1&gt;Services&lt;/h1&gt;
+ &lt;p&gt;We offer web 
+   development and design.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
     </pre>
-    </div>
     <hr>
-    <div>
+    <h4>Output:</h4>
+    <img src="htmlintroeg3.png">
+    </div>
+    <hr><br><br>
+    <div class="fourth">
          <h3>Example 4:</h3>
     <pre>
 &lt;!DOCTYPE html&gt;
@@ -97,13 +125,20 @@
 &lt;head&gt;
  &lt;title&gt;Favorite color&lt;/title&gt;
 &lt;/head&gt;
- &lt;h5&gt;My Favorite color&lt;/h5&gt;
- &lt;p&gt;I love the color purple. it's peaceful and creative. &lt;/p&gt;
+&lt;body&gt;
+ &lt;h1&gt;My Favorite color&lt;/h1&gt;
+ &lt;p&gt;I love the color purple.
+  it's peaceful and 
+  creative.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
     </pre>
+    <hr>
+    <h4>Output:</h4>
+    <img src="htmlintroeg4.png">
     </div>
-    <div>
+    <hr><br><br>
+    <div class="fifth">
          <h3>Example 5:</h3>
     <pre>
 &lt;!DOCTYPE html&gt;
@@ -111,12 +146,19 @@
 &lt;head&gt;
  &lt;title&gt;Study Focus&lt;/title&gt;
 &lt;/head&gt;
- &lt;h5&gt;Today's Study Topic&lt;/h5&gt;
- &lt;p&gt;I'm learning HTML tags and how to use headings and  paragraphs.&lt;/p&gt;
+&lt;body&gt;
+ &lt;h1&gt;Today's Study Topic&lt;/h1&gt;
+ &lt;p&gt;I'm learning HTML tags 
+  and how to use headings and 
+  paragraphs.&lt;/p&gt;
 &lt;/body&gt;
 &lt;/html&gt;
     </pre>
+    <hr>
+    <h4>Output:</h4>
+    <img src="htmlintroeg5.png">
     </div>
+    
     <br><br>
      <button><a href="html1introductionmcq.html">Previous</a></button>
     <button><a href="html1intropracticalquestions.html">Next</a></button>
