--- a/htmltheory.html
+++ b/htmltheory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>HTML THEORY</title>
+        <title>HTML LEARN</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -11,18 +11,18 @@
                 text-decoration: none;
             }
             .hoverc{
-                background-color: rgb(210, 100, 211);
+                background-color: rgb(85, 31, 86);
                 padding: 10px;
                 border-radius: 10px;
             }
             .hoverc:hover{
                  background-color: #25042f;
             }
-            body{
-                font-family: arial,sans-serif;
-                background-color: #4c2358; 
-                color: white;
-            }
+         body{
+                background-color: #dabde3;
+                font-family: HELVETICA;
+                color: #4c2358;
+}
             h1{
                 text-align: center;
             }
@@ -32,21 +32,19 @@
         </style>
     </head>
     <body>
-    <h1>HTML THEORY</h1>
+    <h1>HTML(HyperText Markup Language)</h1>
     <div class="main">
     
-       <div class="hoverc "> <a href="html1introduction.html">HTML INTRODUCTION</a></div>
-        <div class="hoverc "><a href="html2elements.html">HTML ELEMENTS</a></div>
-       <div class="hoverc"><a href="html3attributes.html">HTML ATTRIBUTES</a></div>
-       <div class="hoverc"><a href="">HTML HEADINGS</a></div>
-       <div class="hoverc">HTML PARAGRAPHS</div>
-        <div class="hoverc"><a href="html6formatting.html">HTML FORMATTING</a></div>
-        <div class="hoverc">HTML QUOTATIONS</div>
-        <div class="hoverc">HTML COMMENTS</div>
-       <div class="hoverc">HTML COMMENTS</div>
-        <div class="hoverc"><a href="HTMLCOLOR.html">HTML COLORS</a></div>
-        <div class="hoverc">HTML CSS</div>
-        
+       <a href="html1introduction.html"><div class="hoverc ">HTML INTRODUCTION</div></a>
+        <a href="html2elements.html"><div class="hoverc">HTML ELEMENTS</div></a>
+       <a href="html3textformatting.html"><div class="hoverc">HTML TEXT FORMATTING</div></a>
+       <a href="html4lists.html"><div class="hoverc">HTML LISTS</div></a>
+       <a href="html5linksandimages.html"><div class="hoverc">HTML LINKS AND IMAGES</div></a>
+        <a href="html6tables.html"><div class="hoverc">HTML TABLES</div></a>
+        <a href="html7formsandinputs.html"><div class="hoverc">HTML FORMS AND INPUTS</div></a>
+        <a href="html8mediaelements.html"><div class="hoverc">HTML MEDIA ELEMENTS</div></a>
+       <a href="html9sematicelements.html"><div class="hoverc">HTML SEMATIC ELEMENTS</div></a>
+        <a href="html10htmlapladvanced.html"><div class="hoverc">HTML API </div></a> 
     </div>
     </body>
 </html>
