--- a/index.html
+++ b/index.html
@@ -7,19 +7,22 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <img src="nkmain (2).png" width="150" />
-      <nav class="menu">
-<div class="hoverc1">
-        <div class="hoverc"><a href="index.html">HOME</a></div>
-        <div class="hoverc"><a href="subjects.html">SUBJECTS</a></div>
-        <div class="hoverc"><a href="html.html">PROGRAMMING</a></div>
-        <div class="hoverc"><a href="pro">PROJECTS</a></div>
-        <div class="hoverc"><a href="#">NOTES</a></div>
-        <div class="hoverc"><a href="roadmap.html">ROADMAPS</a></div>
-        <div class="hoverc"><a href="#">ABOUT</a></div>
-        <div class="hoverc"><a href="#">CONTACT</a></div>
-        </div>
+    
+     
+      <header>
+        <img src="nkmain (2).png" alt="NK LOGO">
+        <nav class="menu">
+      <div class="hoverc1">
+        <a href="index.html"><div class="hoverc">HOME</div></a>
+        <a href="subjects.html"><div class="hoverc">SUBJECTS</div></a>
+        <a href="html.html"><div class="hoverc">PROGRAMMING</div></a>
+        <a href="projects.html"><div class="hoverc">PROJECTS</div></a>
+        <a href="#"><div class="hoverc">NOTES</div></a>
+        <a href="roadmap.html"></a><div class="hoverc">ROADMAPS</div></a>
+        <a href="about.html"></a><div class="hoverc">ABOUT</div></a>
+        <a href="blogs.html"><div class="hoverc">BLOGS</div></a>
+        <a href="contact.html"><div class="hoverc">CONTACT</div></a>
+      </div>
       </nav>
     </header>
     <br><br>
@@ -29,12 +32,21 @@
     <main style="text-align: center">
       <br>
       <br>
-      <div class="div1"><a href="resources.html">EXPLORE</a></div>
+      <a href="resources.html"><div class="div1">EXPLORE</div></a>
     </main>
     <br><br>
     <div class="subtagline">
       Get access to free notes, coding tips, career guides & more.
     </div><br><br>
+    <section>
+      <div class="mainpic">
+    <a href="html.html"><div class="pic"><img src="html1.png" class="pic1"></div></a>
+    <a href="css.html"><div class="pic"><img src="css1.png" class="pic1"></div></a>
+    <a href="javascript.html"><div class="pic"><img src="javascript1.png" class="pic1"></div></a>
+    <a href="c.html"><div class="pic"><img src="c1.png" class="pic1"></div></a>
+    <a href="cpp.html"><div class="pic"><img src="c++1.png" class="pic1"></div></a>
+      </div>
+    </section>
     <!--
     <section class="about">
       <h2 style="font-size: 40px; text-align: center;">ABOUT NK</h2>
@@ -57,6 +69,8 @@
       <a href="instagram.com/thatstudyspace005/">Instagram</a>
     </footer>
     -->
-
+<footer>
+  <p>© 2025 NK Study Hub. All rights reserved.</p>
+</footer>
   </body>
 </html>
