--- a/javascript.html
+++ b/javascript.html
@@ -15,7 +15,7 @@
     <div class="hoverc"><a href="css.html">CSS</a></div>
    <div class="hoverc"> <a href="javascript.html" class="background">JAVASCRIPT</a></div>
     <div class="hoverc"><a href="c.html">C</a></div>
-    <div class="hoverc"><a href="C++">C++</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
      <div class="hoverc"><a href="python.html">PYTHON</a></div>
     <div class="hoverc"><a href="java.html">JAVA</a></div>
    <div class="hoverc"><a href="sql.html">SQL</a></div>
@@ -23,6 +23,7 @@
    </nav>
    </header>
     <h1>JavaScript</h1>
+    <div class="page"
 <section>
     <h2>💻 Why You Should Learn JavaScript</h2>
     <p>JavaScript is the heart of modern websites. From interactive buttons to dynamic content and full-scale web apps — it’s the language that makes websites come alive. If you want to build cool features, apps, or games — JavaScript is the way to go!</p>
@@ -52,11 +53,11 @@
        🛠️ Practical — Build mini-projects like calculators, interactive forms, and more<br>
       🎥 Tutorial Video — Easy-to-follow visual lessons for quick learning</p>
     </section>
-
-    <div class="div2">
-    <div class="hoverc"><a href="javascripttheory.html">JAVASCRIPT LEARN</a></div>
-   <div class="hoverc"><a href="javascriptpractical.html">JAVASCRIPT PRACTICAL</a></div>
-    <div class="hoverc"><a href="javascripttutorial.html">JAVASCRIPT TUTORIAL</a></div>
+<h2 style="text-align:center;">🧭 Choose What You Want to Do:</h2>
+    <a href="javascripttheory.html"><div class="div2">JAVASCRIPT LEARN</div></a>
+   <a href="javascriptpractical.html"><div class="div2">JAVASCRIPT PRACTICAL</div></a>
+    <a href="javascripttutorial.html"><div class="div2">JAVASCRIPT TUTORIAL</div></a>
+   <a href="practicecode.html"> <div class="div2">PRACTICE LIVE CODE</div></a>
     </div>
         <h3 class="end">🌱 Start simple. Create magic. With JavaScript, you’re not just coding — you’re building the future.</h3>
     </body>
