--- a/programminglanguages.html
+++ b/programminglanguages.html
@@ -4,7 +4,7 @@
         <title>PROGRAMMING LANGUAGES</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="programminglanguages.css" rel="stylesheet">
+        <link href="programminghome.css" rel="stylesheet">
        
     </head>
     <body>
@@ -12,13 +12,13 @@
              <img src="nkmain (2).png" width="150" />
              <nav class="menu">
    <div class="hoverc1">
-    <div class="hoverc"><a href="html.html">HTML</a></div>
-    <div class="hoverc"><a href="css.html">CSS</a></div>
-   <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
-    <div class="hoverc"><a href="C">C</a></div>
-    <div class="hoverc"><a href="C++">C++</a></div>
-    <div class="hoverc"><a href="java.html">JAVA</a></div>
-   <div class="hoverc"><a href="sql.html">SQL</a></div>
+   <a href="html.html"><div class="hoverc">HTML</div></a>
+    <a href="css.html"><div class="hoverc">CSS</div></a>
+    <a href="javascript.html"><div class="hoverc">JAVASCRIPT</a></div>
+   <a href="C"> <div class="hoverc">C</div></a>
+   <a href="cpp.html"> <div class="hoverc">C++</div></a>
+    <a href="java.html"><div class="hoverc">JAVA</div></a>
+   <a href="sql.html"><div class="hoverc">SQL</div></a>
 </div>
    </div>
    </nav>
