--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>SUBJECTS</title>
+        <title>PROJECTS</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="index.css" rel="stylesheet">
-        <style>
-            .line{
-                color: purple;
-                background-color: rgb(204, 165, 220);
-                margin-bottom: 50px;
-                border-radius: 20px;
-            }
-            .line:hover{
-                color:darkviolet;
-            }
-            .sub1{
-               background-color: rgb(103, 23, 103);
-               text-align: center;
-               padding: 5px;
-               margin: 20px;
-
-
-            }
-        </style>
     </head>
-    <body>  
+    <body>
       <header>
         <img src="nkmain (2).png" alt="NK LOGO">
         <nav class="menu">
@@ -40,18 +21,8 @@
         <a href="blogs.html"><div class="hoverc">BLOGS</div></a>
         <a href="contact.html"><div class="hoverc">CONTACT</div></a>
       </div>
+      </nav>
     </header>
-    <h1>SUBJECTS</h1>
-    <div class="sub1">
-<a href="#" ><div class="line"> Fundamental Networks</div></a>
-<a href="#"><div class="line">Operating Systems</div></a>
-<a href="#">DSA</a>
-<a href="#">SSAD</a>
-<a href="#">DBMS</a>
-<a href="#">ADBMS</a>
-<a href="#">Software Testing Quality Assurance</a>
-<a href="#">Linux</a><br>
-<a href="#">Cloud Technology</a>
-    </div>
+    
     </body>
 </html>
