--- a/python.html
+++ b/python.html
@@ -15,7 +15,7 @@
     <div class="hoverc"><a href="css.html">CSS</a></div>
     <div class="hoverc"> <a href="javascript.html">JAVASCRIPT</a></div>
     <div class="hoverc"><a href="c.html" >C</a></div>
-    <div class="hoverc"><a href="C++.html">C++</a></div>
+    <div class="hoverc"><a href="cpp.html">C++</a></div>
     <div class="hoverc"><a href="python.html"class="background">PYTHON</a></div>
     <div class="hoverc"><a href="java.html">JAVA</a></div>
     <div class="hoverc"><a href="sql.html">SQL</a></div>
@@ -23,35 +23,48 @@
    </nav>
    </header>
     <h1>Python</h1>
+    <div class="page">
     <section>
     <h2>💻 Why You Should Learn Python</h2>
-    <p></p>
+    <p>C++ is a powerful language used in real-world applications
+         like game development, operating systems, competitive
+          programming, and more. It blends the speed of C with
+           the power of object-oriented programming. 
+           If you're serious about coding —<b> C++ is a must-learn.</b>
+        </p>
     </section>
     <section>
     <h2>🚀 Benefits of Learning Python</h2>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <h3></h3>
-    <p></p>
+    <h3>✅ Build Strong Fundamentals</h3>
+    <p>C++ strengthens your understanding of core concepts like memory,
+         logic, and structure —
+         setting a solid base for any programming career.</p>
+    <h3>✅ Object-Oriented Programming</h3>
+    <p>With classes, objects, inheritance, and polymorphism — 
+        C++ teaches you how real-world software is built.</p>
+    <h3>✅ Widely Used in Industry</h3>
+    <p>From games to embedded systems, from browsers to banking software —
+         C++ powers complex systems across industries.</p>
+    <h3>✅ Boosts Your Competitive Coding</h3>
+    <p>Top programmers use C++ in competitive coding because of its speed and versatility.
+        Want to crack tech interviews? Start here.</p>
+    <h3>✅ Transition to Advanced Tech</h3>
+    <p>Once you know C++, it's easier to learn data structures, 
+        algorithms, and even transition 
+        to languages like Java, Python, and Rust.</p>
     </section>
     <section>
     <h2>💡 What You’ll Learn Here</h2>
-    <p>👨‍💻 Learn — <br>
-       🛠️ Practical — <br>
-       🧠 Mini Projects —  <br>
-       🎥 Tutorial Videos — </p>
+    <p>👨‍💻 Learn —  Syntax, variables, loops, functions, OOP, and file handling<br>
+       🛠️ Practical — Practice with real-world examples and challenges <br>
+       🧠 Mini Projects — Build simple games, calculators, or mini management systems <br>
+       🎥 Tutorial Videos — Step-by-step visual learning for beginners </p>
     </section>
-    <div class="div2">
-    <div class="hoverc"><a href="pythontheory.html">PYTHON LEARN</a></div>
-    <div class="hoverc"><a href="pythonpractical.html">PYTHON PRACTICAL</a></div>
-    <div class="hoverc"><a href="pythonprojects.html">PYTHON PROJECTS</a></div>
-    <div class="hoverc"><a href="pythontutorialvid.html">PYTHON TUTORIAL VIDEO</a></div>
+   <a href="pythontheory.html"> <div class="div2">PYTHON LEARN</div></a>
+    <a href="pythonpractical.html"><div class="div2">PYTHON PRACTICAL</div></a>
+   <a href="pythonprojects.html"> <div class="div2">PYTHON PROJECTS</div></a>
+    <a href="pythontutorialvid.html"><div class="div2">PYTHON TUTORIAL VIDEO</div></a>
+    <a href="#"><div class="div2">PRACTICE LIVE CODE</div></a>
     </div>
     <h3 class="end">🌱 Start with Python. Build your logic. Unlock the world of coding.</h3>
     </body>
