--- a/roadmap.html
+++ b/roadmap.html
@@ -35,6 +35,7 @@
     <ul>
         <li><a href="fullstackdeveloper.html">FULL STACK DEVELOPER</a></li>
         <li><a href="#">SOFTWARE ENGINEER</a></li>
+        <li><a href="#">FRONT END DEVELOPER </a></li>
         <li><a href="#">SOFTWARE DEVELOPER</a></li>
         <li><a href="#">APP DEVELOPER</a></li>
         <li><a href="#">AI ENGINEER</a></li>
