--- a/html1intropracticalquestions.html
+++ b/html1intropracticalquestions.html
@@ -22,8 +22,12 @@
 &lt;/body&gt;
 &lt;/html&gt;
   </pre>
+  <div style="display:inline-flex">
     <button onclick="checkAnswer1()">Check Answer</button>
     <p id="result1"></p>
+    <button onclick="seeanswer1()">See Answer</button>
+    <p id="result01"></p>
+    </div>
     </div>
     
     <!--Question 2 -->
@@ -38,8 +42,12 @@
 &lt;/body&gt;
 &lt;/html&gt;
     </pre>
+    <div style="display: inline-flex;">
     <button onclick="checkAnswer2()">Check Answer</button>
     <p id="result2"></p>
+    <button onclick="seeanswer1()">See Answer</button>
+    <p id="result01"></p>
+    </div>
     </div>
     <div>
         <!--Question 3-->
@@ -54,8 +62,11 @@
 &lt;/body&gt;
 &lt;/html&gt;
         </pre>
+        <div style="display: inline-flex;">
         <button onclick="checkAnswer3()">Check Answer</button>
     <p id="result3"></p>
+    <button onclick="seeanswer1()">See Answer</button>
+    <p id="result01"></p>
     </div>
     </div>
 <!--Question 4-->
@@ -83,8 +94,14 @@
 <div class="option">
     <input type ="radio" name="q4" id="opt4" value="D"><label for ="opt4">D) All of the above</label>
 </div>
+<div style="display:inline-flex;">
 <button onclick="checkAnswer4()">Check Answer</button>
-<p id="result4"></p></div>
+<p id="result4"></p>
+<button onclick="seeanswer1()">See Answer</button>
+    <p id="result01"></p>
+</div>
+</div>
+</div>
 <!--Question 5-->
 <div class="question">
     <h4>Q.5: Fill in the missing tag:</h4>
@@ -100,8 +117,12 @@
 &lt;/body&gt;
 &lt;/html&gt;
         </pre>
+        <div style="display: inline-flex;">
 <button onclick="checkAnswer5()">Check Answer</button>
 <p id="result5"></p>
+<button onclick="seeanswer1()">See Answer</button>
+    <p id="result01"></p>
+    </div>
 </div>
 
 
